--- a/src/components/TransactionHistory/TransactionHistory.module.css
+++ b/src/components/TransactionHistory/TransactionHistory.module.css
@@ -1,5 +1,10 @@
 .transactionHistory {
     margin: 40px auto 0;
+    width: 400px;
+    box-shadow: 
+    0 5px 5px -1px rgb(0 0 0 / 20%),
+     /* 0 5px 5px -1px rgb(0 0 0 / 14%),  */
+     0 5px 5px -1px rgb(0 0 0 / 12%);
   }
   th {
     text-align: left;
