--- a/src/components/FriendList/FriendList.module.css
+++ b/src/components/FriendList/FriendList.module.css
@@ -1,4 +1,9 @@
 .friendlist {
-    margin-left: 40px;
-    margin-top: 40px;
-  }
+  width: 400px;
+  margin: 40px auto;
+  box-shadow: 
+  0 5px 5px -1px rgb(0 0 0 / 20%),
+   /* 0 5px 5px -1px rgb(0 0 0 / 14%),  */
+   0 5px 5px -1px rgb(0 0 0 / 12%);
+
+}
