--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,49 +1,57 @@
 .profile {
-    width: 300px;
-    margin: 20px auto 0;
-    box-shadow: 0 1px 3px rgb(0 0 0 / 20%), 0 1px 1px rgb(0 0 0 / 14%),
-      0 2px 1px -1px rgb(0 0 0 / 12%);
-    color: grey;
-  }
-  .avatar {
-    margin-top: 10px;
-  }
-  .description {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  .avatar {
-    border-radius: 50%;
-    border: 1px solid grey;
-    width: 50%;
-  }
-  .stats {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 10px;
-    border: 1px solid rgb(218, 218, 218);
-  }
-  .item {
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    display: flex;
-    padding: 10px;
-    width: 100%;
-  }
-  .item:not(:last-child) {
-    border-right: 1px solid rgb(218, 218, 218);
-  }
-  .name,
-  .tag,
-  .location {
-    margin-top: 10px;
-  }
-  .name,
-  .quantity {
-    font-weight: 500;
-    color: black;
-  }
+  width: 400px;
+  margin: 20px auto 0;
+  box-shadow: 
+  0 5px 5px -1px rgb(0 0 0 / 20%),
+   /* 0 5px 5px -1px rgb(0 0 0 / 14%),  */
+   0 5px 5px -1px rgb(0 0 0 / 12%);
+  color: rgb(173, 173, 173);
+
+}
+.avatar {
+  margin-top: 10px;
+}
+.description {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* padding-top: 10px; */
+  margin-top: 10px;
+  
+}
+.avatar {
+  border-radius: 50%;
+  border: 1px solid grey;
+  width: 50%;
+}
+.stats {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 10px;
+  padding: 10px;
+  border: 1px solid rgb(218, 218, 218);
+}
+.item {
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  display: flex;
+  padding: 10px;
+  width: 100%;
+}
+.item:not(:last-child) {
+  border-right: 1px solid rgb(218, 218, 218);
+}
+.name,
+.tag,
+.location {
+  margin-top: 10px;
+}
+.name,
+.quantity {
+  font-weight: 500;
+  color: black;
+  padding: 5px;
+}
