--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-/*@import-normalize bring in normalize.css styles */
+@import-normalize;
 
 body {
   margin: 0;
@@ -7,6 +7,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
 }
 
 code {
@@ -14,7 +15,8 @@ code {
     monospace;
 }
 
-ul {
+ul,
+ol  {
   list-style: none;
   margin: 0;
   padding-left: 0px;
@@ -27,6 +29,9 @@ a {
 h1,
 h2,
 h3,
+h4,
+h5,
+h6,
 p {
   margin: 0;
 }
